tests/syntax_error/class_missing_type.jou
class Foo:
    # should be "x: int"
    x  # Error: not a valid statement
